--- a/clinical-vis.html
+++ b/clinical-vis.html
@@ -300,7 +300,7 @@ limitations under the License.
         font-weight: 400;
       }
     </style>
-    <div class="basic-data">
+    <!--<div class="basic-data">
       <div class="basic-data-heading">Patient Information</div>
       <div class="basic-data-pair">
         <div class="basic-data-key">Name</div>
@@ -328,7 +328,7 @@ limitations under the License.
       </div>
     </div>
     <div class="charts-and-labs">
-      <!--<div id="textarea">
+      <div id="textarea">
         <div class="note-card">
           <div class="note-heading"><span class="heading-label">Selected Note</span> [[noteTime]]</div>
           <div class="note-text">[[noteText]]</div>
