--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@ limitations under the License.
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>clinical-vis demo</title>
+    <title>demo</title>
     <script>
       window.ShadyDOM = {force: true};
     </script>
