--- a/clinical-vis.html
+++ b/clinical-vis.html
@@ -14,6 +14,17 @@ limitations under the License.
 http://localhost:8081/components/clinical-vis/demo/index.html
 http://localhost:8081/components/clinical-vis/demo/table-index.html
 -->
+
+<!--
+$.getJSON('http://soundcloud.com/oembed?url=http%3A//soundcloud.com/forss/flickermood&format=js&callback=?', function(data) {
+    console.log(data);
+});
+
+$.getJSON('http://lore-api.sickkids.ca/api/data?measure=157&patient=2673678&starttime=1464725335.68&endtime=1464725336', function(data) {
+    console.log(data);
+});
+-->
+
 <link rel="import" href="../polymer/polymer.html">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 <dom-module id="clinical-vis">
