--- a/demo/index.html
+++ b/demo/index.html
@@ -33,9 +33,12 @@ limitations under the License.
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../clinical-vis.html">
     <script>
-      d3.json('test.json', (data) => {
+      d3.json('fake_measures.json', (data) => {
         document.querySelector("#vis").json = data;
       });
+      /*d3.json('test.json', (data) => {
+        document.querySelector("#vis").json = data;
+      });*/
     </script>
   </head>
   <body>
